# alma-doc-autofill

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md
backend/: desktop_entry.py  pyproject.toml
backend/app/: config.py  llm.py  main.py  merge.py  observability.py  registry.py
backend/app/api/: __init__.py  matters.py
backend/app/extraction/: __init__.py  coherence.py  engine.py  prompts.py  quality.py  render.py  validators.py
backend/app/forms/: __init__.py  fieldmap.py  fill.py  inspect.py  library.py  registry.py  schemas.py
backend/app/forms/data/: forms_registry.json
backend/app/forms/maps/: __init__.py  g28.py
backend/app/kernel/: __init__.py  agent.py  auth.py  config.py  llm.py  observability.py  package.py  ratelimit.py  schema_lint.py
backend/app/kernel/audit/: __init__.py  refs.py  transcript.py
backend/app/kernel/evalkit/: __init__.py  harness.py
backend/app/kernel/memory/: __init__.py  service.py
backend/app/population/: __init__.py  artifact.py  demo.py  field_map.py  fill.py  verify.py
backend/app/schemas/: __init__.py  common.py  g28.py  passport.py  screener.py
backend/app/screener/: __init__.py  agent.py  api.py  citations.py  criteria.py  evidence.py  exhibits.py  graph.py  intake.py  package.py  prompts.py  state.py
backend/app/storage/: __init__.py  base.py  local_store.py  supabase_schema.sql  supabase_store.py
backend/devtools/package_author/: README.md  __init__.py  __main__.py  _inspect.py  acceptance.py  author.py  prompts.py  sandbox.py  tools.py
backend/supabase/migrations/: 0001_matters.sql  0002_rls_policies.sql
backend/tests/: conftest.py  matter_intake_util.py  test_api.py  test_auth.py  test_coherence.py  test_corpus_tools.py  test_desktop_middleware.py  test_download_tokens.py  test_engine_offline.py  test_evalkit.py  test_exhibit_index.py  test_extraction_golden.py  test_forms_fill.py  test_forms_registry.py  test_local_store.py  test_masking_reverify.py  test_matter_api.py  test_matter_intake_ask.py  test_matter_intake_chase.py  test_matter_intake_planner.py  test_matter_store.py  test_memory_service.py  test_observability.py  test_package_author.py  test_packages.py  test_population.py  test_preflight.py  test_preflight_eval.py  test_preflight_forms_wiring.py  test_quality.py  test_ratelimit.py  test_render.py  test_rfe_response.py  test_rfe_response_eval.py  test_rls_migration.py  test_schema_lint.py  test_screener_agent.py  test_screener_api.py  test_screener_citations.py  test_screener_criteria.py  (+4 more)
backend/tests/data/: form_snapshot.html
backend/tests/fixtures/: README.md
backend/validation/: generate_samples.py  personas.py  run_screener_validation.py  run_validation.py  screener_personas.py
demo/: .env.example  .gitignore  CLAUDE_WORKPLAN.md  README.md  pyproject.toml
demo/agents/: __init__.py  harness.py  tools_case.py  tools_uscis.py
demo/core/: __init__.py  case_history.py  config.py  db.py  drafts.py  events.py  models.py  sendgate.py
demo/docs/: architecture.excalidraw  gmail-agent-setup.md
demo/gmail_agent/: __init__.py  auth.py  client.py  config.py  consumer.py  email_agent.py  main.py  parsing.py  pipeline.py  reader.py  sender.py  state.py  watch.py
demo/intake_workflow/: __init__.py  case_templates.py  main.py  schemas.py  store.py
demo/intake_workflow/domain/: api.py  checks.py  eligibility.py  extractors.py  filings.py  followups.py  layer2.py  packets.py
demo/intake_workflow/email/: gmail.py  outbox.py
demo/intake_workflow/integration/: __init__.py  case_link.py  config.py  events_shim.py  handoff_consumer.py  history_sync.py  sendgate_provider.py
demo/intake_workflow/static/: style.css
demo/intake_workflow/templates/: base.html
demo/intake_workflow/web/: auth.py  routes_client.py  routes_staff.py  templating.py
demo/scripts/: __init__.py  check_no_real_pii.py  integrated_flow_smoke.py
demo/seed/: __init__.py  seed_case.py
demo/slack_agent/: __init__.py  agent_tools.py  approvals.py  blocks.py  casewrite.py  deep_agent.py  dev_stub.py  escalations.py  handoff_agent.py  handoff_parser.py  listener.py  main.py  mention.py  router.py  senders.py  settings.py  status_command.py  threads.py
demo/tests/agents/: conftest.py  test_tools_uscis.py
demo/tests/core/: conftest.py  test_case_history.py  test_drafts.py  test_events.py  test_seed.py  test_sendgate.py
demo/tests/gmail_agent/: conftest.py  test_config.py  test_consumer.py  test_email_agent.py  test_parsing.py  test_pipeline.py  test_sender.py  test_state.py
demo/tests/slack_agent/: conftest.py  test_agent_tools.py  test_approvals.py  test_blocks.py  test_case_history_e2e.py  test_deep_agent.py  test_dod_integration.py  test_escalations.py  test_gmail_sender.py  test_handoff_agent.py  test_handoff_parser.py  test_listener.py  test_mention.py  test_router.py  test_status.py  test_threads.py
desktop/: .gitignore  (+1 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
(+174 files in other folders)
