[project]
name = "yunaki-backend"
version = "0.1.0"
description = "Passport + G-28 extraction and form population backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "google-genai>=1.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "numpy>=1.26",
    "playwright>=1.46",
    "supabase>=2.6",
    "rapidfuzz>=3.9",
    "langfuse>=4.0",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "deepagents>=0.6",
    "langchain-google-genai>=4.0",
    "httpx>=0.27",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
# Desktop packaging: PyInstaller freezes desktop_entry.py into the one-dir
# sidecar the Tauri shell spawns. Kept out of `dev` so CI/test installs stay
# lean — install with `pip install -e ".[desktop]"` on a build machine.
desktop = [
    "pyinstaller>=6.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
