[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yunaki-demo"
version = "0.1.0"
description = "Yunaki demo-week action layer: frozen /core contracts + seed."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["core", "seed", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
